--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^8.8.2"
+    "mongoose": "^8.8.2",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "compression": "^1.7.5",
